# pyprc

./: .gitignore  Cargo.toml  README.md  test_script.py
.github/workflows/: ci.yml
src/: .lib.rs.swp  duplicate.rs  lib.rs
