[package]
name = "pyprc"
version = "0.3.1"
authors = ["BenHall-7 <Benjaminjahall@gmail.com>"]
edition = "2021"

[lib]
name = "pyprc"
crate-type = ["cdylib"]

[dependencies]
prc-rs = "1.5.2"
pyo3 = { version = "0.23.3", features = ["extension-module", "multiple-pymethods"] }

[build-dependencies]
pyo3-build-config = "0.23.3"

